Fixed -  Menu not showing on Tablets

--- a/content/style.css
+++ b/content/style.css
@@ -711,7 +711,7 @@ header
 	}
 }
 
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 768px) {
 	li
 	{
 		display: inline;
